<resources>
    <string name="app_name">CallHistoryApp</string>
    <string name="MSG_ASK_PERMISSION">This app needs permissions to use this feature. You can grant them in app settings.</string>
    <string name="congratulations_10_your_request_has_been_submitted_successfully_our_team_will_send_you_data_on_given_email_address_in_24_hours">Congratulations !! 10 Your request has been submitted successfully... Our team will send you data on given email address in 24 hours.</string>
    <string name="battery_info">Battery Info :</string>
    <string name="battery_info_none">Battery Info</string>
    <string name="battery_level">Battery Level</string>
    <string name="battery_status">Battery Status</string>
    <string name="battery_health">Battery Health</string>
    <string name="battery_temp">Battery Temp.</string>
    <string name="battery_tech">Battery Tech.</string>
    <string name="battery_voltage">Battery Voltage</string>
    <string name="battery_uptime">Battery Uptime</string>
    <string name="_91">+ 91</string>
    <string name="find_location">Find Location</string>
    <string name="system_usage">System Usage</string>
    <string name="device_info">Device Info</string>
    <string name="isd">ISD</string>
    <string name="std">STD</string>
    <string name="bank_services">Bank Services</string>
    <string name="device_info_dot">Device Info :</string>
    <string name="device_name">Device Name</string>
    <string name="model_name">Model Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="product_code">Product Code</string>
    <string name="imei_no">IMEI No.</string>
    <string name="search">Search</string>
    <string name="find_by_country">Find by Country</string>
    <string name="find_by_isd">Find by ISD</string>
    <string name="start">Start</string>
    <string name="more_apps">More Apps</string>
    <string name="call_history">Call History</string>
    <string name="whatsapp_history">WhatsApp History</string>
    <string name="sms_history">SMS History</string>
    <string name="all_history">All History</string>
    <string name="check_balance">Check Balance</string>
    <string name="call_customer">Call Customer</string>
    <string name="submit">Submit</string>
    <string name="call_id">Call Id</string>
    <string name="find_by_city">Find by City</string>
    <string name="find_by_std">Find by STD</string>
    <string name="ram_info">RAM Info :</string>
    <string name="used_ram">Used RAM</string>
    <string name="free_ram">Free RAM</string>
    <string name="total_ram">Total RAM</string>
    <string name="internal_storage_info">Internal Storage Info :</string>
    <string name="free_space">Free Space</string>
    <string name="total_space">Total Space</string>
    <string name="external_storage_info">External Storage Info :</string>
    <string name="bank_list">Bank List</string>
    <string name="isd_code">ISD Code</string>
    <string name="std_code">STD Code</string>
</resources>