<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash"
    tools:context=".Ui.Activity.ShareDetailOptionActivity">

    <RelativeLayout
        android:id="@+id/RlHeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/layout_header" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RlAdvertisement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="bottom|center"
        app:layout_constraintTop_toBottomOf="@+id/RlHeaderBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.facebook.ads.NativeAdLayout
            android:id="@+id/NativeBannerAdContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <ProgressBar
            android:id="@+id/progressBarAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RlHeaderBar">

        <TextView
            android:id="@+id/BtnCall"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/ic_btn_view"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/call_history"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toStartOf="@+id/BtnWhatsApp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideTop" />

        <TextView
            android:id="@+id/BtnWhatsApp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/ic_btn_view"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/whatsapp_history"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/BtnCall"
            app:layout_constraintTop_toTopOf="@id/guideTop" />

        <TextView
            android:id="@+id/BtnSMS"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/ic_btn_view"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/sms_history"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toStartOf="@+id/BtnAll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/BtnCall" />

        <TextView
            android:id="@+id/BtnAll"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/ic_btn_view"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/all_history"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/BtnSMS"
            app:layout_constraintTop_toBottomOf="@id/BtnWhatsApp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.62" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>