<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash"
    tools:context=".Ui.Activity.BatteryActivity">

    <RelativeLayout
        android:id="@+id/RlHeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/layout_header" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/RlAdvertisement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RlHeaderBar">

        <TextView
            android:id="@+id/TvBatteryInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_vertical"
            android:text="@string/battery_info"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/CardBattery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardBackgroundColor="#E0E0E0"
            app:cardCornerRadius="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TvBatteryInfo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConsBatteryLevel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_level"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed-medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />

                    <TextView
                        android:id="@+id/TvBatteryLevel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="sans-serif-condensed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConsBatteryStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ConsBatteryLevel">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_status"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />

                    <TextView
                        android:id="@+id/TvBatteryStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="sans-serif-condensed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConsBatteryHealth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ConsBatteryStatus">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_health"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed-medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />

                    <TextView
                        android:id="@+id/TvBatteryHealth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="sans-serif-condensed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConsBatteryTemp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ConsBatteryHealth">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_temp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed-medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />

                    <TextView
                        android:id="@+id/TvBatteryTemp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="sans-serif-condensed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConsBatteryTech"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ConsBatteryTemp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_tech"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed-medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />

                    <TextView
                        android:id="@+id/TvBatteryTech"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="sans-serif-condensed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConsBatteryVoltage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ConsBatteryTech">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_voltage"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed-medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />

                    <TextView
                        android:id="@+id/TvBatteryVoltage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="sans-serif-condensed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ConsBatteryUptime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ConsBatteryVoltage">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/battery_uptime"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed-medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />

                    <TextView
                        android:id="@+id/TvBatteryUptime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="sans-serif-condensed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:id="@+id/RlAdvertisement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="bottom|center"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.facebook.ads.NativeAdLayout
            android:id="@+id/NativeBannerAdContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <ProgressBar
            android:id="@+id/progressBarAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>